Add increment and decrement methods.

--- a/app/src/main/res/values/dimen.xml
+++ b/app/src/main/res/values/dimen.xml
@@ -1,4 +1,5 @@
 <resources>
     <dimen name="padding">16dp</dimen>
     <dimen name="textSize">16sp</dimen>
+    <dimen name="button">48dp</dimen>
 </resources>
