--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,9 +10,15 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="@dimen/padding"
         android:text="@string/quantity"
         android:textAllCaps="true" />
+
+    <Button
+        android:layout_width="@dimen/button"
+        android:layout_height="@dimen/button"
+        android:layout_marginTop="@dimen/padding"
+        android:onClick="increment"
+        android:text="+" />
 
     <TextView
         android:id="@+id/quantity_text_view"
@@ -21,6 +27,12 @@
         android:text="0"
         android:textColor="@color/black"
         android:textSize="@dimen/textSize" />
+
+    <Button
+        android:layout_width="@dimen/button"
+        android:layout_height="@dimen/button"
+        android:onClick="decrement"
+        android:text="-" />
 
     <TextView
         android:layout_width="wrap_content"
