Update submitOrder method to change price.

--- a/app/src/main/res/values/dimen.xml
+++ b/app/src/main/res/values/dimen.xml
@@ -1,5 +1,6 @@
 <resources>
     <dimen name="padding">16dp</dimen>
     <dimen name="textSize">16sp</dimen>
+    <dimen name="paddingQ">20dp</dimen>
     <dimen name="button">48dp</dimen>
 </resources>
