--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,13 +18,14 @@
         android:layout_height="@dimen/button"
         android:layout_marginTop="@dimen/padding"
         android:onClick="increment"
-        android:text="+" />
+        android:text="@string/increment" />
 
     <TextView
         android:id="@+id/quantity_text_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="0"
+        android:text="@string/_0"
+        android:paddingHorizontal="@dimen/paddingQ"
         android:textColor="@color/black"
         android:textSize="@dimen/textSize" />
 
@@ -32,7 +33,7 @@
         android:layout_width="@dimen/button"
         android:layout_height="@dimen/button"
         android:onClick="decrement"
-        android:text="-" />
+        android:text="@string/decrement" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -46,7 +47,7 @@
         android:id="@+id/price_text_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="$0"
+        android:text="@string/dollars"
         android:textColor="@color/black"
         android:textSize="@dimen/textSize" />
 
@@ -55,6 +56,6 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/padding"
         android:onClick="submitOrder"
-        android:text="order" />
+        android:text="@string/orderButton" />
 
 </LinearLayout>
