--- a/app/src/main/res/values/dimen.xml
+++ b/app/src/main/res/values/dimen.xml
@@ -1,6 +1,8 @@
 <resources>
-    <dimen name="padding">16dp</dimen>
-    <dimen name="textSize">16sp</dimen>
-    <dimen name="paddingQ">20dp</dimen>
-    <dimen name="button">48dp</dimen>
+    <dimen name="padding">20dp</dimen>
+    <dimen name="textSize">20sp</dimen>
+    <dimen name="javatextSize">80sp</dimen>
+    <dimen name="paddingQ">14dp</dimen>
+    <dimen name="button">40dp</dimen>
+    <dimen name="javaMargin">24dp</dimen>
 </resources>
