--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -20,7 +20,7 @@
         android:layout_alignParentBottom="true"
         android:layout_alignRight="@+id/java"
         android:layout_marginBottom="250dp"
-        android:layout_marginRight="16dp"
+        android:layout_marginRight="40dp"
         android:fontFamily="@font/reenie_beanie"
         android:paddingHorizontal="@dimen/button"
         android:text="@string/just_java"
@@ -32,6 +32,26 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="vertical">
+
+        <TextView
+            android:id="@+id/toppings"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="@dimen/padding"
+            android:text="@string/toppings"
+            android:textAllCaps="true"
+            android:textColor="@color/black"
+            android:textSize="@dimen/textSize" />
+
+        <CheckBox
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/whipped"
+            android:textColor="@color/black"
+            android:textSize="@dimen/textSize"
+            android:paddingHorizontal="@dimen/javaMargin"
+            android:layout_marginStart="@dimen/padding"
+            android:button="@drawable/checkbox" />
 
         <TextView
             android:id="@+id/quantity"
@@ -82,18 +102,18 @@
         </LinearLayout>
 
         <TextView
-            android:id="@+id/price"
+            android:id="@+id/summary"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="@dimen/padding"
             android:paddingTop="@dimen/padding"
-            android:text="@string/price"
+            android:text="@string/summary"
             android:textAllCaps="true"
             android:textColor="@color/black"
             android:textSize="@dimen/textSize" />
 
         <TextView
-            android:id="@+id/price_text_view"
+            android:id="@+id/order_summary_text_view"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/padding"
