Change theme to Light with DarkActionBar

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -107,7 +107,7 @@
                 android:layout_width="@dimen/button"
                 android:layout_height="@dimen/button"
                 android:layout_marginStart="@dimen/padding"
-                android:background="#4d3319"
+                android:background="#5D4037"
                 android:onClick="decrement"
                 android:text="@string/decrement"
                 android:textColor="#FFF"
@@ -127,7 +127,7 @@
                 android:layout_width="@dimen/button"
                 android:layout_height="@dimen/button"
                 android:layout_marginBottom="@dimen/padding"
-                android:background="#4d3319"
+                android:background="#5D4037"
                 android:onClick="increment"
                 android:text="@string/increment"
                 android:textColor="#FFF"
@@ -163,7 +163,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_marginTop="@dimen/padding"
-        android:background="#4d3319"
+        android:background="#5D4037"
         android:onClick="submitOrder"
         android:padding="@dimen/paddingQ"
         android:text="@string/orderButton"
